[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
once_cell = "1.19.0"
raw-window-handle = "0.5"
winit = { version = "0.29.10", features = ["rwh_05", "x11", "wayland"], default-features = false }
